# storehub-success-copilot

./: .gitignore  6-HOUR-PROTOTYPE-PRD.md  Project Design.md  README.md  docker-compose.yml
.cursor/rules/: coding.mdc
backend/: action_templates.py  alert_intelligence.py  analytics_engine.py  auto_trigger_engine.py  csm_management_engine.py  dashboard_engine.py  health_engine.py  main.py  mock_data.py  models.py  notification_engine.py  priority_queue_manager.py  recommendation_engine.py  requirements.txt  workflow_engine.py
data-pipeline/etl/: pipeline.py  pyproject.toml  run_etl.py
data-pipeline/etl/calculators/: __init__.py  health_score_calculator.py
data-pipeline/etl/config/: data_schema.yaml
data-pipeline/etl/extractors/: __init__.py  base_extractor.py  csv_extractors.py
data-pipeline/etl/loaders/: __init__.py  base_loader.py  json_loaders.py
data-pipeline/etl/transformers/: __init__.py  base_transformer.py  data_transformers.py
docs/: ETL-Implementation-Plan.md
docs/architecture/: README.md  data-flow.md  summary.md
docs/deployment/: README.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionCard.tsx  Layout.tsx
frontend/src/pages/: ActionsPage.tsx  AlertsPage.tsx  AnalyticsPage.tsx  CustomerJourneyPage.tsx  CustomerList.tsx  Dashboard.tsx
frontend/src/services/: api.ts
scripts/setup/: init-db.sql
